--- a/1.Fundamentos de Python/expresione_regulares.ipynb
+++ b/1.Fundamentos de Python/expresione_regulares.ipynb
@@ -38,6 +38,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1e48077",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "4ab6191f",
    "metadata": {},
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "9534b0be",
    "metadata": {},
    "outputs": [
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "c8cc8a03",
    "metadata": {},
    "outputs": [
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "6b67bd06",
    "metadata": {},
    "outputs": [
@@ -170,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "d7688829",
    "metadata": {},
    "outputs": [
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "4a7d7231",
    "metadata": {},
    "outputs": [
@@ -216,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "3fdb606c",
    "metadata": {},
    "outputs": [
@@ -249,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "92f0c59e",
    "metadata": {},
    "outputs": [
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "18f804a1",
    "metadata": {},
    "outputs": [
@@ -295,10 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4e947226",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejemplo 11: ['100']\n"
+     ]
+    }
+   ],
    "source": [
     "# lokkbehind positivo\n",
     "# Encontrar texto precedido por un patrón específico\n",
@@ -319,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "6d9eaeac",
    "metadata": {},
    "outputs": [
@@ -341,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "4738787f",
    "metadata": {},
    "outputs": [
@@ -366,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "8e52f8b3",
    "metadata": {},
    "outputs": [
@@ -388,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "afda36bb",
    "metadata": {},
    "outputs": [
@@ -419,10 +435,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "604bd28e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Texto: 'aa1 bb22 cc333 dd4444'\n",
+      "Longitud del texto: 21\n",
+      "\n",
+      "Patrón usado: \\d+\n",
+      "\n",
+      "Resultados:\n",
+      "  1. Número: '1'\n",
+      "     Posición: 2-3\n",
+      "     Contexto: 'aa1 b'\n",
+      "  2. Número: '22'\n",
+      "     Posición: 6-8\n",
+      "     Contexto: 'bb22 c'\n",
+      "  3. Número: '333'\n",
+      "     Posición: 11-14\n",
+      "     Contexto: 'cc333 d'\n",
+      "  4. Número: '4444'\n",
+      "     Posición: 17-21\n",
+      "     Contexto: 'dd4444'\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 3\n",
     "# Ejemplo 3 - Versión detallada\n",
@@ -447,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "afd7d7fa",
    "metadata": {},
    "outputs": [
@@ -470,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "04a0ac99",
    "metadata": {},
    "outputs": [
@@ -502,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "id": "83d23622",
    "metadata": {},
    "outputs": [
@@ -510,7 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
+      "True\n",
       "False\n",
       "False\n"
      ]
@@ -519,12 +560,66 @@
    "source": [
     "# Ejemplo 4\n",
     "import re\n",
-    "def es_cuatro_digitos(s):\n",
-    "    return bool(re.match(r'^\\\\d{4}$', s))\n",
     "\n",
-    "print(es_cuatro_digitos('1234'))\n",
-    "print(es_cuatro_digitos('01234'))\n",
-    "print(es_cuatro_digitos('12a4'))"
+    "def es_cuatro_digitos(s):\n",
+    "    # CORRECCIÓN: Cambiar r'^\\\\d{4}$' por r'^\\d{4}$'\n",
+    "    return bool(re.match(r'^\\d{4}$', s))\n",
+    "\n",
+    "# Pruebas\n",
+    "print(es_cuatro_digitos('1234'))   # True - 4 dígitos exactos\n",
+    "print(es_cuatro_digitos('01234'))  # False - 5 dígitos\n",
+    "print(es_cuatro_digitos('12a4'))   # False - contiene letra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "eb3986ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultados de las pruebas:\n",
+      "  '1234' -> True\n",
+      "  '01234' -> False\n",
+      "  '12a4' -> False\n",
+      "  '123' -> False\n",
+      "  '12345' -> False\n",
+      "  '0000' -> True\n",
+      "  '12 34' -> False\n",
+      "  '1.34' -> False\n",
+      "  '' -> False\n",
+      "  'abcd' -> False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# version mejorada con mas casos de prueba\n",
+    "import re\n",
+    "\n",
+    "def es_cuatro_digitos(s):\n",
+    "    return bool(re.match(r'^\\d{4}$', s))\n",
+    "\n",
+    "# Casos de prueba más completos\n",
+    "test_cases = [\n",
+    "    '1234',    # True - 4 dígitos\n",
+    "    '01234',   # False - 5 dígitos\n",
+    "    '12a4',    # False - contiene letra\n",
+    "    '123',     # False - solo 3 dígitos\n",
+    "    '12345',   # False - 5 dígitos\n",
+    "    '0000',    # True - 4 dígitos\n",
+    "    '12 34',   # False - contiene espacio\n",
+    "    '1.34',    # False - contiene punto\n",
+    "    '',        # False - cadena vacía\n",
+    "    'abcd',    # False - solo letras\n",
+    "]\n",
+    "\n",
+    "print(\"Resultados de las pruebas:\")\n",
+    "for test in test_cases:\n",
+    "    resultado = es_cuatro_digitos(test)\n",
+    "    print(f\"  '{test}' -> {resultado}\")"
    ]
   },
   {
@@ -538,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f8afe900",
    "metadata": {},
    "outputs": [],
@@ -563,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "bb209d28",
    "metadata": {},
    "outputs": [],
@@ -589,10 +684,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "170ee880",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Teléfono-: 555-1234, 555-2345, 555 3456\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 7\n",
     "import re\n",
@@ -612,10 +715,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "33053dc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['manzana', ' naranja', ' pera', 'uva  limón']\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 8\n",
     "import re\n",
@@ -635,10 +746,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "8d6782fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 9\n",
     "import re\n",
@@ -658,10 +777,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "016f4a88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lookahead +: []\n",
+      "lookahead -: ['foo', 'foo', 'foo']\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 10\n",
     "import re\n",
@@ -683,10 +811,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "25b781ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 11\n",
     "import re\n",
@@ -706,10 +842,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "0bf2958b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 12\n",
     "import re\n",
@@ -728,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "fc241621",
    "metadata": {},
    "outputs": [
@@ -764,10 +908,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "3fdf2e77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejemplo 13: ['https://www.example.com', 'http://sub.dominio.org/path']\n"
+     ]
+    }
+   ],
    "source": [
     "texto = \"Visita https://www.example.com y http://sub.dominio.org/path\"\n",
     "patron = r'https?://(?:[-\\w.]|(?:%[\\da-fA-F]{2}))+[/\\w\\.-]*'\n",
@@ -785,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "57ba8a77",
    "metadata": {},
    "outputs": [
@@ -825,10 +977,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "533a6b35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "192.168.0.1 False\n",
+      "256.100.1.1 False\n",
+      "10.0.0 False\n",
+      "1.2.3.4 False\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 13\n",
     "import re\n",
@@ -849,10 +1012,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "006b099e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-10-22 False\n",
+      "2025-13-01 False\n",
+      "2025-02-30 False\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 14\n",
     "import re\n",
@@ -873,10 +1046,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "0a4e2030",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Visita http://example.com, https://sub.domain.org:8080/path?x=1 y también http://test.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 15\n",
     "import re\n",
@@ -901,10 +1082,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "b27345eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 16\n",
     "import re\n",
@@ -925,10 +1114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "f9e24128",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fechas: 05/10/2025 y 06/11/2024\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 17\n",
     "import re\n",
@@ -952,10 +1149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "40daaee5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "greedy time 9.489059448242188e-05 lazy time 0.0002262592315673828\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo 18 (demostración simple de greediness)\n",
     "import re, time\n",
@@ -977,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "id": "aee6a33e",
    "metadata": {},
    "outputs": [
@@ -1031,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "7d4ed7c7",
    "metadata": {},
    "outputs": [
@@ -1077,10 +1282,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "6d1135da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sin compilar - Encontrado: Python es rápido\n",
+      "Sin compilar - Encontrado: Python es fácil de aprender\n",
+      "Con compilación - Encontrado: Python es rápido\n",
+      "Con compilación - Encontrado: Python es fácil de aprender\n"
+     ]
+    }
+   ],
    "source": [
     "# Para patrones que se usan múltiples veces, es mejor compilarlos\n",
     "textos = [\n",
@@ -1111,10 +1327,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "c237fbdf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IGNORECASE: ['Python', 'PYTHON']\n",
+      "MULTILINE: ['PYTHON', 'JAVA']\n",
+      "DOTALL: Hola\n",
+      "Mundo\n"
+     ]
+    }
+   ],
    "source": [
     "texto = \"Python\\njava\\nPYTHON\\nJAVA\"\n",
     "\n",
