--- a/1.Fundamentos de Python/expresione_regulares.ipynb
+++ b/1.Fundamentos de Python/expresione_regulares.ipynb
@@ -38,14 +38,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1e48077",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "4ab6191f",
    "metadata": {},
@@ -573,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "eb3986ea",
    "metadata": {},
    "outputs": [
@@ -620,6 +612,37 @@
     "for test in test_cases:\n",
     "    resultado = es_cuatro_digitos(test)\n",
     "    print(f\"  '{test}' -> {resultado}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "ce0f8eb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'1234' -> True\n",
+      "'01234' -> False\n",
+      "'12a4' -> False\n",
+      "'123' -> False\n",
+      "'0000' -> True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alternativa sin expresiones regulares:\n",
+    "def es_cuatro_digitos_alternativo(s):\n",
+    "    # Verifica que la cadena tenga longitud 4 y todos los caracteres sean dígitos\n",
+    "    return len(s) == 4 and s.isdigit()\n",
+    "\n",
+    "# Mismas pruebas\n",
+    "test_cases = ['1234', '01234', '12a4', '123', '0000']\n",
+    "for test in test_cases:\n",
+    "    resultado = es_cuatro_digitos_alternativo(test)\n",
+    "    print(f\"'{test}' -> {resultado}\")"
    ]
   },
   {
