--- a/4.Analisis de datos/pivot.ipynb
+++ b/4.Analisis de datos/pivot.ipynb
@@ -37,9 +37,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 📊 Ejemplos con datasets reales\n",
+    "## 📊 Ejemplos con datasets\n",
     "\n",
-    "### 🔹 Ejemplo 1: Resumen básico — Promedio de propinas por día (dataset `tips`)"
+    "🔹 Ejemplo 1: Resumen básico — Promedio de propinas por día (dataset `tips`)"
    ]
   },
   {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "id": "5998e3c2",
    "metadata": {},
    "outputs": [
