--- a/4.Analisis de datos/3.Titanic-EDA.ipynb
+++ b/4.Analisis de datos/3.Titanic-EDA.ipynb
@@ -83,13 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b8332bf9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -1303,7 +1304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
