--- a/4.Analisis de datos/castro.ipynb
+++ b/4.Analisis de datos/castro.ipynb
@@ -5,7 +5,7 @@
    "id": "6a5410e7",
    "metadata": {},
    "source": [
-    "# CAstro buses"
+    "# Castro buses"
    ]
   },
   {
@@ -25,28 +25,39 @@
    "id": "c3c74368",
    "metadata": {},
    "source": [
-    "## Carga de datos desde archivo CSV"
+    "## Carga de datos desde archivo Excel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "eca949b8",
+   "execution_count": null,
+   "id": "8176606f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "empresas = pd.read_csv('../data/CASTRO-empresas.csv')\n",
-    "destinos = pd.read_csv('../data/CASTRO-destinos.csv')"
+    "# chiloebus\n",
+    "empresas = pd.read_excel('../data/chiloebus.xlsx', sheet_name='CASTRO-empresas')\n",
+    "destinos = pd.read_excel('../data/chiloebus.xlsx', sheet_name='CASTRO-destinos')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "id": "d829283e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "empresas.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "063b9e51",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Establecer 'RUT' como índice en los dataframes existentes\n",
+    "# Establecer 'Rut' como índice en los dataframes existentes\n",
     "for name in ['empresas', 'destinos']:\n",
     "    df = globals().get(name)\n",
     "    if df is None:\n",
@@ -678,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
