--- a/2.Estadistica/quantiles.ipynb
+++ b/2.Estadistica/quantiles.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "\n",
     "# Análisis de Cuantiles \n",
-    "## (Q1/Q2/Q3), IQR, Outliers y Boxplots — Pandas & Polars\n",
+    "## (Q1/Q2/Q3), IQR, Outliers y Boxplots\n",
     "\n",
     "**Objetivos:**  \n",
     "1) Calcular **Q1, Q2 (mediana)** y **Q3**.  \n",
