--- a/4.Analisis de datos/3.Titanic-EDA.ipynb
+++ b/4.Analisis de datos/3.Titanic-EDA.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b8332bf9",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "095b7ec3",
    "metadata": {},
    "outputs": [
@@ -145,114 +145,310 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>531</td>\n",
-       "      <td>DEAN, Miss Elizabeth Gladys 'Millvina'</td>\n",
+       "      <th>501</th>\n",
+       "      <td>680</td>\n",
+       "      <td>FORD, Mr H.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Engineering Crew</td>\n",
+       "      <td>E</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>H.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4-15-1912</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1501</th>\n",
+       "      <td>1702</td>\n",
+       "      <td>ROBERTS, Mr Robert George</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>Engineering Crew</td>\n",
+       "      <td>E</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>Robert George</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1877</td>\n",
+       "      <td>4-15-1912</td>\n",
+       "      <td>6/30/1877</td>\n",
+       "      <td>M</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>559</th>\n",
+       "      <td>1932</td>\n",
+       "      <td>STRANDBERG, Miss Ida Sofia</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>female</td>\n",
-       "      <td>0.17</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>3rd Class Passenger</td>\n",
        "      <td>3</td>\n",
-       "      <td>2315</td>\n",
+       "      <td>7553</td>\n",
        "      <td>Southampton</td>\n",
        "      <td>...</td>\n",
        "      <td>Miss</td>\n",
-       "      <td>Elizabeth Gladys 'Millvina'</td>\n",
-       "      <td>2-02-1912</td>\n",
+       "      <td>Ida Sofia</td>\n",
+       "      <td>1889-11-22</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5-31-2009</td>\n",
-       "      <td>2-02-1912</td>\n",
+       "      <td>4-15-1912</td>\n",
+       "      <td>11/22/1889</td>\n",
        "      <td>C</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>498</td>\n",
-       "      <td>DANBOM, Master Gilbert Sigvard Emanuel</td>\n",
+       "      <th>1828</th>\n",
+       "      <td>1315</td>\n",
+       "      <td>MCGOWAN, Miss Catherine</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>3rd Class Passenger</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9232</td>\n",
+       "      <td>Queenstown</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Miss</td>\n",
+       "      <td>Catherine</td>\n",
+       "      <td>1869-09-30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4-15-1912</td>\n",
+       "      <td>9/30/1869</td>\n",
+       "      <td>C</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>930</td>\n",
+       "      <td>HOLLAND, Mr Thomas</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>male</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>3rd Class Passenger</td>\n",
-       "      <td>3</td>\n",
-       "      <td>347080</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Victualling Crew</td>\n",
+       "      <td>V</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Belfast</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>Thomas</td>\n",
+       "      <td>1883-06-10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4-15-1912</td>\n",
+       "      <td>6/10/1883</td>\n",
+       "      <td>C</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>962</th>\n",
+       "      <td>189</td>\n",
+       "      <td>BIETRIX, Mr George Baptiste</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Restaurant Staff</td>\n",
+       "      <td>R</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>George Baptiste</td>\n",
+       "      <td>1883-10-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4-15-1912</td>\n",
+       "      <td>10/25/1883</td>\n",
+       "      <td>C</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005</th>\n",
+       "      <td>701</td>\n",
+       "      <td>FRAUENTHAL, Dr Henry William</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>1st Class Passenger</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17611</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Dr</td>\n",
+       "      <td>Henry William</td>\n",
+       "      <td>1863-03-13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3-11-1927</td>\n",
+       "      <td>3/13/1863</td>\n",
+       "      <td>C</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1430</th>\n",
+       "      <td>588</td>\n",
+       "      <td>DREW, Mrs Lulu Thorne</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2nd Class Passenger</td>\n",
+       "      <td>2</td>\n",
+       "      <td>28220</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Mrs</td>\n",
+       "      <td>Lulu Thorne</td>\n",
+       "      <td>1878-03-19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6-02-1970</td>\n",
+       "      <td>3/19/1878</td>\n",
+       "      <td>C</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1434</td>\n",
+       "      <td>NAVRATIL, Master Michel Marcel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2nd Class Passenger</td>\n",
+       "      <td>2</td>\n",
+       "      <td>230080</td>\n",
        "      <td>Southampton</td>\n",
        "      <td>...</td>\n",
        "      <td>Master</td>\n",
-       "      <td>Gilbert Sigvard Emanuel</td>\n",
-       "      <td>11-16-1911</td>\n",
+       "      <td>Michel Marcel</td>\n",
+       "      <td>6-12-1908</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4-15-1912</td>\n",
-       "      <td>11-16-1911</td>\n",
+       "      <td>1-30-2001</td>\n",
+       "      <td>6-12-1908</td>\n",
        "      <td>C</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1961</td>\n",
-       "      <td>TANNuS, Master As'ad</td>\n",
+       "      <th>697</th>\n",
+       "      <td>1359</td>\n",
+       "      <td>MINEFF, Mr Ivan</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>male</td>\n",
-       "      <td>0.42</td>\n",
+       "      <td>24.0</td>\n",
        "      <td>3rd Class Passenger</td>\n",
        "      <td>3</td>\n",
-       "      <td>2625</td>\n",
-       "      <td>Cherbourg</td>\n",
+       "      <td>349233</td>\n",
+       "      <td>Southampton</td>\n",
        "      <td>...</td>\n",
-       "      <td>Master</td>\n",
-       "      <td>As'ad</td>\n",
-       "      <td>11-08-1911</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>Ivan</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6-12-1931</td>\n",
-       "      <td>11-08-1911</td>\n",
-       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4-15-1912</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>24.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 27 columns</p>\n",
+       "<p>10 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Name_ID                                     Name  Female  Male     Sex  \\\n",
-       "0      531  DEAN, Miss Elizabeth Gladys 'Millvina'        1     0  female   \n",
-       "1      498  DANBOM, Master Gilbert Sigvard Emanuel        0     1    male   \n",
-       "2     1961                    TANNuS, Master As'ad        0     1    male   \n",
+       "      Name_ID                             Name  Female  Male     Sex   Age  \\\n",
+       "501       680                     FORD, Mr H.        0     1    male  22.0   \n",
+       "1501     1702       ROBERTS, Mr Robert George        0     1    male  35.0   \n",
+       "559      1932      STRANDBERG, Miss Ida Sofia        1     0  female  22.0   \n",
+       "1828     1315         MCGOWAN, Miss Catherine        1     0  female  42.0   \n",
+       "1000      930              HOLLAND, Mr Thomas        0     1    male  28.0   \n",
+       "962       189     BIETRIX, Mr George Baptiste        0     1    male  28.0   \n",
+       "2005      701    FRAUENTHAL, Dr Henry William        0     1    male  49.0   \n",
+       "1430      588           DREW, Mrs Lulu Thorne        1     0  female  34.0   \n",
+       "39       1434  NAVRATIL, Master Michel Marcel        0     1    male   3.0   \n",
+       "697      1359                 MINEFF, Mr Ivan        0     1    male  24.0   \n",
        "\n",
-       "    Age           Class/Dept Class  Ticket       Joined  ...   Title  \\\n",
-       "0  0.17  3rd Class Passenger     3    2315  Southampton  ...    Miss   \n",
-       "1  0.33  3rd Class Passenger     3  347080  Southampton  ...  Master   \n",
-       "2  0.42  3rd Class Passenger     3    2625    Cherbourg  ...  Master   \n",
+       "               Class/Dept Class  Ticket       Joined  ...   Title  \\\n",
+       "501      Engineering Crew     E     NaN  Southampton  ...      Mr   \n",
+       "1501     Engineering Crew     E     NaN  Southampton  ...      Mr   \n",
+       "559   3rd Class Passenger     3    7553  Southampton  ...    Miss   \n",
+       "1828  3rd Class Passenger     3    9232   Queenstown  ...    Miss   \n",
+       "1000     Victualling Crew     V     NaN      Belfast  ...      Mr   \n",
+       "962      Restaurant Staff     R     NaN  Southampton  ...      Mr   \n",
+       "2005  1st Class Passenger     1   17611  Southampton  ...      Dr   \n",
+       "1430  2nd Class Passenger     2   28220  Southampton  ...     Mrs   \n",
+       "39    2nd Class Passenger     2  230080  Southampton  ...  Master   \n",
+       "697   3rd Class Passenger     3  349233  Southampton  ...      Mr   \n",
        "\n",
-       "                         First         DoB Year_Birth  Date_Death   DoB_Clean  \\\n",
-       "0  Elizabeth Gladys 'Millvina'   2-02-1912        NaN   5-31-2009   2-02-1912   \n",
-       "1      Gilbert Sigvard Emanuel  11-16-1911        NaN   4-15-1912  11-16-1911   \n",
-       "2                        As'ad  11-08-1911        NaN   6-12-1931  11-08-1911   \n",
+       "                First         DoB Year_Birth  Date_Death   DoB_Clean  \\\n",
+       "501                H.         NaN        NaN   4-15-1912         NaN   \n",
+       "1501    Robert George         NaN       1877   4-15-1912   6/30/1877   \n",
+       "559         Ida Sofia  1889-11-22        NaN   4-15-1912  11/22/1889   \n",
+       "1828        Catherine  1869-09-30        NaN   4-15-1912   9/30/1869   \n",
+       "1000           Thomas  1883-06-10        NaN   4-15-1912   6/10/1883   \n",
+       "962   George Baptiste  1883-10-25        NaN   4-15-1912  10/25/1883   \n",
+       "2005    Henry William  1863-03-13        NaN   3-11-1927   3/13/1863   \n",
+       "1430      Lulu Thorne  1878-03-19        NaN   6-02-1970   3/19/1878   \n",
+       "39      Michel Marcel   6-12-1908        NaN   1-30-2001   6-12-1908   \n",
+       "697              Ivan         NaN        NaN   4-15-1912         NaN   \n",
        "\n",
-       "  Age_F_Code Age_F sibsp parch  \n",
-       "0          C   0.2   1.0   2.0  \n",
-       "1          C   0.0   0.0   2.0  \n",
-       "2          C   0.0   0.0   1.0  \n",
+       "     Age_F_Code Age_F sibsp parch  \n",
+       "501           A  22.0   NaN   NaN  \n",
+       "1501          M  34.0   NaN   NaN  \n",
+       "559           C  22.0   0.0   0.0  \n",
+       "1828          C  42.0   0.0   0.0  \n",
+       "1000          C  28.0   NaN   NaN  \n",
+       "962           C  28.0   NaN   NaN  \n",
+       "2005          C  49.0   2.0   0.0  \n",
+       "1430          C  34.0   1.0   1.0  \n",
+       "39            C   3.0   1.0   1.0  \n",
+       "697           A  24.0   0.0   0.0  \n",
        "\n",
-       "[3 rows x 27 columns]"
+       "[10 rows x 27 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dft = pd.read_csv('../data/titanic5_full.csv')\n",
-    "dft.head(3)"
+    "dft.sample(10)"
    ]
   },
   {
@@ -1278,14 +1474,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bff5900",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
